@@ -5,20 +5,9 @@
 # of patent rights can be found in the PATENTS file in the same directory.
 #
 """Module for common base classes and helpers, such as options and counters"""
-from collections import deque, namedtuple
+from collections import namedtuple
 from functools import partial
 from six import iteritems
-import time
-
-
-class SampleType:
-    """Pass an array of these in the `types` paremeter to `sample()`"""
-    COUNT = 'count'
-    SUM = 'sum'
-    AVG = 'avg'
-    AVERAGE = 'avg'
-    MAX = 'max'
-    MIN = 'min'
 
 
 class _Nameable(object):
@@ -47,227 +36,12 @@ class _Bindable(object):
         return self._bound[owner]
 
     def _bind(self, obj):
-        raise NotImplementedError
-
-
-class _BaseCounter(_Nameable, _Bindable):
-    """Base type for counter-like things"""
-    suffix = 'UNDEF'
-
-    def __init__(self, name=None):
-        super(_BaseCounter, self).__init__(name)
-        self._initialize()
-
-    def _bind(self, obj):
-        return self.__class__(name=self.name)
-
-    def _initialize(self):
         raise NotImplementedError()
 
-    def getvalue(self):
+class ProvidesCounters(object):
+    def _genCounterCallbacks(self):
+        """Yields this item's (names, value) counter tuple(s)."""
         raise NotImplementedError()
-
-    def add(self, value):
-        raise NotImplementedError()
-
-    def __call__(self):
-        return self.getvalue()
-
-    def __int__(self):
-        return int(self.getvalue())
-
-    def __float__(self):
-        return float(self.getvalue())
-
-    def __str__(self):
-        v = self.getvalue()
-        if v is None:
-            return '__None__'
-        return str(v)
-
-
-class ValueCounter(_BaseCounter):
-    """Base type for counter-like things that have a `._value`"""
-    DEFAULT_VALUE = 0.0
-    def _initialize(self, value=None):
-        self._value = value or self.DEFAULT_VALUE
-
-    def getvalue(self):
-        return self._value
-
-
-class Sum(ValueCounter):
-    """A running total"""
-    suffix = SampleType.SUM
-
-    def add(self, value):
-        self._value += value
-
-    def increment(self):
-        self.add(1.0)
-
-    def incrementBy(self, value):
-        self.add(value)
-
-    def reset(self, value=0):
-        self._value = value
-
-counter = Sum
-
-class Count(ValueCounter):
-    """A running count"""
-    suffix = SampleType.COUNT
-    DEFAULT_VALUE = 0
-
-    def add(self, value):
-        self._value += 1
-
-class Average(_BaseCounter):
-    """A running average"""
-    suffix = SampleType.AVERAGE
-
-    def _initialize(self):
-        self._total = 0.0
-        self._count = 0
-
-    def add(self, value):
-        # TODO: Re-use sibling total/count counters if present
-        # not sure how to do this sensibly
-        self._total += value
-        self._count += 1
-
-    def getvalue(self):
-        if self._count == 0:
-            return None
-        return self._total / self._count
-
-
-class Max(ValueCounter):
-    """A running maximum"""
-    suffix = SampleType.MAX
-    DEFAULT_VALUE = None
-
-    def add(self, value):
-        if self._value is None:
-            self._value = value
-        elif value > self._value:
-            self._value = value
-
-
-class Min(ValueCounter):
-    """A running minimum"""
-    suffix = SampleType.MIN
-    DEFAULT_VALUE = None
-
-    def add(self, value):
-        if self._value is None:
-            self._value = value
-        elif value < self._value:
-            self._value = value
-
-    def getvalue(self):
-        return self._value
-
-# TODO: Percentiles!!
-
-
-# Lookup for mapping SampleTypes to their respective classes
-_SampleMethod = {
-    SampleType.COUNT: Count,
-    SampleType.SUM: Sum,
-    SampleType.AVERAGE: Average,
-    SampleType.MAX: Max,
-    SampleType.MIN: Min,
-}
-
-
-class samples(_Nameable, _Bindable):
-    """`samples` are used to generate series of counters dynamically
-
-    This is so you can say, keep track of the average duration of some event for
-    the last minute, hour, day, etc, and export these as 4 separate counters.
-    """
-    def __init__(self, types=None, windows=None, name=None):
-        super(samples, self).__init__(name)
-        self.types = types or [SampleType.AVERAGE]
-        # minutely, hourly
-        self.windows = sorted(windows or [60, 3600])
-        self.max_window = max(self.windows)
-        self.samples = deque()
-        self.dirty = True
-        self._prev_counters = {}
-        self._prev_time = None
-
-    def _bind(self, obj):
-        return self.__class__(types=self.types, windows=self.windows,
-                              name=self.name)
-
-    def add(self, value):
-        now = time.time()
-        self.samples.append((now, value))
-
-        # When adding samples, trim old ones.
-        while now - self.max_window > self.samples[0][0]:
-            self.samples.popleft()
-        self.dirty = True
-
-        # TODO: Handle "infinite" windows
-
-    def getCounters(self):
-        if self.dirty is False and self._prev_time == int(time.time()):
-            return self._prev_counters
-
-        ops = []
-        for type in self.types:
-            ops.append(_SampleMethod[type]())
-
-        now = time.time()
-        genwindows = iter(self.windows)
-        window = genwindows.next()
-        result = {}
-        done = False
-
-        def _saveCounterValues(window):
-            """Re-usable helper function for setting results and continuing"""
-            for op in ops:
-                result[self.name + '.' + op.suffix + '.' + str(window)] = \
-                    op.getvalue()
-            # Move to the next window
-            try:
-                return genwindows.next(), False
-            except StopIteration:
-                # We exhausted all our windows
-                return None, True
-
-        for ts, value in reversed(self.samples):
-            # We exceeded the current window
-            if now - window > ts:
-                # Save counter values
-                window, done = _saveCounterValues(window)
-                if done:
-                    break
-
-            for op in ops:
-                op.add(value)
-
-        # We exhausted the samples before the windows
-        while not done:
-            window, done = _saveCounterValues(window)
-
-        self._prev_counters = result
-        self._prev_time = int(now)
-        self.dirty = False
-        return result
-
-    def getCounter(self, name, default=None):
-        return self.getCounters().get(name, default)
-
-    def iterkeys(self):
-        for type in self.types:
-            for window in self.windows:
-                yield self.name + '.' + type + '.' + str(window)
-        # TODO: Infinite Windows
-
 
 _AddArgArgs = namedtuple('_AddArgArgs', ['opts', 'kwargs'])
 
@@ -372,12 +146,10 @@ class _SpartsObject(_SpartsObjectBase):
         #for k, v in iteritems(cls.__dict__):
         for k in dir(cls):
             v = getattr(cls, k)
-            if isinstance(v, _BaseCounter):
-                inst.counters[v.name] = v
-            elif isinstance(v, samples):
-                for subcounter in v.iterkeys():
-                    inst.counters[subcounter] = partial(
-                        v.getCounter, subcounter)
+            if isinstance(v, ProvidesCounters):
+                for cn, cv in v._genCounterCallbacks():
+                    inst.counters[cn] = cv
+
         return inst
 
     @classmethod
