@@ -8,7 +8,8 @@
 from __future__ import absolute_import
 
 from six import itervalues
-from sparts.sparts import option, counter  #, samples, SampleType
+from sparts.counters import counter  #, samples, SampleType
+from sparts.sparts import option
 from sparts.vtask import VTask, SkipTask
 
 import tornado.ioloop
