@@ -3,6 +3,7 @@ CHANGES
 
 0.5.0
 -----
+* Moved counters from sparts.sparts to sparts.counters
 * Fix some bugs in DirectoryWatcherTask
 * Add an initService() hook to VService
 * Added a hook to do per-thread Task-specific initialization, initTaskThread()
